--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
 <body>
     <!-- Верх -->
 <header class="header">
-    <nav>
+
+    <nav class="nav conterner">
         <a href="" class="logo link">Web<span class="logo-black">Studio</span></a>
         <ul class="list nav-list">
             <li class="nav-item"> <a href="./index.html" class="nav-link link">Студия</a></li>
@@ -23,45 +24,45 @@
             <li class="nav-item"> <a href="" class="nav-link link"> Контакты </a></li>
         </ul>
 
-
-
+        <ul class="contacts-list list">
+            <li class="contacts-item"> <a href="mailto:info@devstudio.com" class="contacts link"> info@devstudio.com</a>
+            </li>
+            <li class="contacts-item"> <a href="tel:+380961111111" class="contacts link"> +380961111111</a> </li>
+        </ul>
     </nav>
 
-    <ul class="contacts-list list">
-        <li class="contacts-item"> <a href="mailto:info@devstudio.com" class="contacts link"> info@devstudio.com</a>
-        </li>
-        <li class="contacts-item"> <a href="tel:+380961111111" class="contacts link"> +380961111111</a> </li>
 
-    </ul>
+
+
 </header>
 
 
 
 <main>
   
-<section>
+<section class="section">
 
     <h1 class="visually-hidden">Проэкты</h1>
     <!-- Кнопки -->
-<ul class="list">
- <li> <button type="button" class="button-portfolio">Все </button></li>
- <li>  <button type="button" class="button-portfolio">Веб-сайты </button>   </li>    
- <li> <button type="button" class="button-portfolio">Приложения</button></li>
- <li> <button type="button" class="button-portfolio">Дизайн</button></li>
- <li> <button type="button" class="button-portfolio">Маркетинг</button></li>
+<ul class="list button-list">
+ <li class="button-list-item"> <button type="button" class="button-portfolio">Все </button></li>
+ <li class="button-list-item">  <button type="button" class="button-portfolio">Веб-сайты </button>   </li>    
+ <li class="button-list-item"> <button type="button" class="button-portfolio">Приложения</button></li>
+ <li class="button-list-item"> <button type="button" class="button-portfolio">Дизайн</button></li>
+ <li class="button-list-item"> <button type="button" class="button-portfolio">Маркетинг</button></li>
 </ul>
 
-
-    <ul class="list">
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img1.jpg" alt=" Ноутбук" width="370" height="294"> <h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>        </a>              </li>                                                          
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img2.jpg" alt="Игра в бастектбол" width="370" height="294"> <h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>  </a>             </li>                                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img3.jpg" alt="Рыба" width="370" height="294"> <h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </a>                   </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294"> <h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>  </a>                   </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img5.jpg" alt="коробки" width="370" height="294"> <h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>   </a>                  </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img6.jpg" alt="Моноблок" width="370" height="294"> <h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>  </a>                    </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" height="294"> <h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </a>                      </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370" height="294"> <h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p> </a>                      </li>                       
-    <li> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img9.jpg" alt="Работа за ноутбуком" width="370" height="294"> <h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p> </a>       </li>                       
+       
+    <ul class="list conterner-procets conterner">
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img1.jpg" alt=" Ноутбук" width="370" height="294"> <h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>        </a>              </li>                                                          
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img2.jpg" alt="Игра в бастектбол" width="370" height="294"> <h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>  </a>             </li>                                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img3.jpg" alt="Рыба" width="370" height="294"> <h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </a>                   </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294"> <h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>  </a>                   </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img5.jpg" alt="коробки" width="370" height="294"> <h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>   </a>                  </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img6.jpg" alt="Моноблок" width="370" height="294"> <h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>  </a>                    </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" height="294"> <h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </a>                      </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370" height="294"> <h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p> </a>                      </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img9.jpg" alt="Работа за ноутбуком" width="370" height="294"> <h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p> </a>       </li>                 
 </ul>
 
 </section>
@@ -82,22 +83,26 @@
 
 
 <footer class="footer">
+
     <a href="" class="logo link">Web<span class="logo-white">Studio</span> </a>
 
     <address class="adress">
 
         <ul class="list">
-            <li class="adress item"> <a href="https://goo.gl/maps/J5LYQcXN28MMdi7CA" target="_blank"
+            <li class="adress-item"> <a href="https://goo.gl/maps/J5LYQcXN28MMdi7CA" target="_blank"
                     rel="noopener noreferrer nofollow" class="adress-link link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li class="contacts-footer"> <a href="mailto:info@devstudio.com" class="contacts-foter link">
+            <li class="contacts-item-footer"> <a href="mailto:info@devstudio.com" class="contacts-foter link">
                     info@devstudio.com</a> </li>
-            <li class="contacts-footer"> <a href="tel:+380961111111" class="contacts-foter link"> +380961111111</a>
+            <li class="contacts-item-footer"> <a href="tel:+380961111111" class="contacts-foter link"> +380961111111</a>
             </li>
 
         </ul>
     </address>
+
+
+
+
 </footer>
-    
 </body>
 </html>
