--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Верх -->
 <header class="header">
-
+     <div class="container">
     <nav class="nav conterner">
         <a href="" class="logo link">Web<span class="logo-black">Studio</span></a>
         <ul class="list nav-list">
@@ -41,7 +41,7 @@
 <main>
   
 <section class="section">
-
+      <div class="container">
     <h1 class="visually-hidden">Проэкты</h1>
     <!-- Кнопки -->
 <ul class="list button-list">
@@ -51,20 +51,20 @@
  <li class="button-list-item"> <button type="button" class="button-portfolio">Дизайн</button></li>
  <li class="button-list-item"> <button type="button" class="button-portfolio">Маркетинг</button></li>
 </ul>
-
+      
        
-    <ul class="list conterner-procets conterner">
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img1.jpg" alt=" Ноутбук" width="370" height="294"> <h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>        </a>              </li>                                                          
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img2.jpg" alt="Игра в бастектбол" width="370" height="294"> <h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>  </a>             </li>                                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img3.jpg" alt="Рыба" width="370" height="294"> <h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </a>                   </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294"> <h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>  </a>                   </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img5.jpg" alt="коробки" width="370" height="294"> <h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>   </a>                  </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img6.jpg" alt="Моноблок" width="370" height="294"> <h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>  </a>                    </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" height="294"> <h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </a>                      </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370" height="294"> <h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p> </a>                      </li>                       
-    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img9.jpg" alt="Работа за ноутбуком" width="370" height="294"> <h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p> </a>       </li>                 
+    <ul class="list list-procets">
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img1.jpg" alt=" Ноутбук" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Технокряк</h2>                        <p class="procets-text">Веб-сайт</p>        </a></div>              </li>                                                          
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img2.jpg" alt="Игра в бастектбол" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Постер New Orlean vs Golden Star</h2> <p class="procets-text">Дизайн</p>  </a>        </div>     </li>                                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img3.jpg" alt="Рыба" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Ресторан Seafood</h2>                 <p class="procets-text">Приложение</p>     </a> </div>                  </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Проект Prime</h2>                     <p class="procets-text">Маркетинг</p>  </a>     </div>              </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img5.jpg" alt="коробки" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Проект Boxes</h2>                     <p class="procets-text">Приложение</p>   </a>   </div>               </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img6.jpg" alt="Моноблок" width="370" height="294"> <div class="border-procets"><h2 class="title-procets"> Inspiration has no Borders</h2>      <p class="procets-text">Веб-сайт</p>  </a>      </div>              </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Издание Limited Edition</h2>         <p class="procets-text">Дизайн  </p>    </a>     </div>                 </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img8.jpg" alt="Бирка" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Проект LAB</h2>                      <p class="procets-text">Маркетинг  </p> </a>     </div>                 </li>                       
+    <li class="procets-item"> <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link"> <img src="./images/portfolio/img9.jpg" alt="Работа за ноутбуком" width="370" height="294"> <div class="border-procets"><h2 class="title-procets">Growing Business</h2>                 <p class="procets-text"> Приложение</p> </a>    </div>   </li>                 
 </ul>
-
+      </div>
 </section>
 
 
