--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <!-- Баннер -->
              
             <section class="banner">
-                <div class="container">
+                <div class="container-banner">
+
                  <h1 class="title-banner">Эффективные решения для вашего бизнеса</h1>
                 
                  <button type="button" class="button"> Заказать услугу</button>
